2003-01-31  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (CreateFiber): Change first parameter
	to SIZE_T.
	(CreateJobObject[AW], CreateHardLink[AW]):Guard with
	if (_WIN32_WINNT >= 0x0500). 

2003-01-31  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winbase.h (PWIN32_FIND_DATAA, PWIN32_FIND_DATAW):
	Add missing typedefs.
	(CreateFiberEx, CreateJobObjectA,CreateJobObjectW): Add missing
	prototypes.
	(CreateHardLinkA, CreateHardLinkW): Return BOOL, not HANDLE.

2003-01-27  Krzysztof Nikiel  <kni@poczta.onet.pl>

	* include/mmsystem.h (MIXERCONTROL_CONTROLF_MULTIPLE): Correct
	define.
	* lib/largeint.c (LargeIntegerAdd): Add, don't multiply.

2003-01-27  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/rpcnterr.h (RPC_X_INVALID_PIPE_OPERATION): Add
	define.
	* include/winbase.h (WAIT_TIMEOUT): Guard against prior
	definition.
	(WAIT_FAILED): Cast to DWORD.
	* include/winerror.h (WAIT_TIMEOUT): Guard against prior
	definition.

2003-01-27  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winerror.h: Protect against multiple
	definition of WSA* error codes.
	* include/winsock.h: Likewise.
	* include/winsock2.h: Likewise.

2003-01-27  Bang Dong-Heui
	    Bang Jun-Young  <junyoung@netbsd.org>

	* include/winerror.h (ERROR_*, SEC_E_*,RPC_S_*, FRS_ERR_*,
	DNS_*, WSA*, WAIT_TIMEOUT): Add missing error codes.
	(RPC_X_INVALID_PIPE_OPERATION): Remove define.


2003-01-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ras.h (RASCONN[AW]): Add dwSessionId for
	(WINVER >= 0x501).

2003-01-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ras.h (RASCONN[AW]): Guard szDeviceType,
	szDeviceName fields with (WINVER >= 0x400). Add dwFlags, luid
	fields for (WINVER >= 0x501).

2003-01-23  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/ws2_32.def (getaddrinfo, freeaddrinfo and getnameinfo):
	Add stubs.
	* include/ws2tcpip.h (IPV6_*) Add IPPROTO_IPV6 level socket
	options.
