@@ -18,6 +18,12 @@ extern "C" {
 #define PSP_HASHELP	32
 #define PSP_USEREFPARENT	64
 #define PSP_USECALLBACK	128
+#define PSP_PREMATURE	1024
+#if (_WIN32_IE >= 0x0400)
+#define PSP_HIDEHEADER	2048
+#define PSP_USEHEADERTITLE	4096
+#define PSP_USEHEADERSUBTITLE	8192
+#endif
 #define PSPCB_RELEASE	1
 #define PSPCB_CREATE	2
 #define PSH_DEFAULT	0
@@ -32,6 +38,17 @@ extern "C" {
 #define PSH_HASHELP	512
 #define PSH_MODELESS	1024
 #define PSH_RTLREADING	2048
+#define PSH_WIZARDCONTEXTHELP	4096
+#if (_WIN32_IE >= 0x0400)
+#define PSH_WIZARD97	8192
+#define PSH_WATERMARK	32768
+#define PSH_USEHBMWATERMARK	65536
+#define PSH_USEHPLWATERMARK	131072
+#define PSH_STRETCHWATERMARK	262144
+#define PSH_HEADER	524288
+#define PSH_USEHBMHEADER	1048576
+#define PSH_USEPAGELANG	2097152
+#endif
 #define PSCB_INITIALIZED	1
 #define PSCB_PRECREATE	2
 #define PSM_GETTABCONTROL	1140
@@ -114,6 +131,10 @@ typedef struct _PROPSHEETPAGEA {
 	LPARAM	lParam;
 	UINT(CALLBACK *pfnCallback)(HWND,UINT,struct _PROPSHEETPAGEA*);
 	UINT *pcRefParent;
+#if (_WIN32_IE >= 0x0400)
+	LPCSTR pszHeaderTitle;
+	LPCSTR pszHeaderSubTitle;
+#endif
 } PROPSHEETPAGEA,*LPPROPSHEETPAGEA;
 typedef const PROPSHEETPAGEA *LPCPROPSHEETPAGEA;
 typedef struct _PROPSHEETPAGEW {
@@ -133,6 +154,10 @@ typedef struct _PROPSHEETPAGEW {
 	LPARAM	lParam;
 	UINT(CALLBACK *pfnCallback)(HWND,UINT,struct _PROPSHEETPAGEW*);
 	UINT *pcRefParent;
+#if (_WIN32_IE >= 0x0400)
+	LPCWSTR pszHeaderTitle;
+	LPCWSTR pszHeaderSubTitle;
+#endif
 } PROPSHEETPAGEW,*LPPROPSHEETPAGEW;
 typedef const PROPSHEETPAGEA *LPCPROPSHEETPAGEW;
 typedef UINT(CALLBACK *LPFNPSPCALLBACKA)(HWND,UINT,LPPROPSHEETPAGEA);
@@ -159,6 +184,17 @@ typedef struct _PROPSHEETHEADERA {
 		HPROPSHEETPAGE *phpage;
 	}DUMMYUNIONNAME3;
 	PFNPROPSHEETCALLBACK pfnCallback;
+#if (_WIN32_IE >= 0x0400)
+	union {
+		HBITMAP hbmWatermark;
+		LPCSTR pszbmWatermark;
+	} DUMMYUNIONNAME4;
+	HPALETTE hplWatermark;
+	union {
+		HBITMAP hbmHeader;
+		LPCSTR pszbmHeader;
+	} DUMMYUNIONNAME5;
+#endif
 } PROPSHEETHEADERA,*LPPROPSHEETHEADERA;
 typedef const PROPSHEETHEADERA *LPCPROPSHEETHEADERA;
 typedef struct _PROPSHEETHEADERW {
@@ -181,6 +217,17 @@ typedef struct _PROPSHEETHEADERW {
 		HPROPSHEETPAGE *phpage;
 	}DUMMYUNIONNAME3;
 	PFNPROPSHEETCALLBACK pfnCallback;
+#if (_WIN32_IE >= 0x0400)
+	union {
+		HBITMAP hbmWatermark;
+		LPCWSTR pszbmWatermark;
+	} DUMMYUNIONNAME4;
+	HPALETTE hplWatermark;
+	union {
+		HBITMAP hbmHeader;
+		LPCWSTR pszbmHeader;
+	} DUMMYUNIONNAME5;
+#endif
 } PROPSHEETHEADERW,*LPPROPSHEETHEADERW;
 typedef const PROPSHEETHEADERW *LPCPROPSHEETHEADERW;
 typedef BOOL(CALLBACK *LPFNADDPROPSHEETPAGE)(HPROPSHEETPAGE,LPARAM);
